Replace remote resources with local ones

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   <title>md-block: Render styleable Markdown in your HTML</title>
   <link rel="icon" href="logo.svg">
   <link rel="stylesheet" href="prism.css">
-  <link rel="stylesheet" href="https://live.prismjs.com/prism-live.css">
+  <link rel="stylesheet" href="prism-live.css">
   <link rel="stylesheet" href="style.css">
   <!-- <script src="md-block.js" type="module"></script> -->
+  <script src="bliss.js"></script>
   <script src="demo.js" type="module"></script>
   <script src="prism.js"></script>
-  <script src="https://live.prismjs.com/src/prism-live.js?load=html,markdown"></script>
+  <script src="prism-live.js"></script>
 </head>
 
 <body>
