--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>md-block: Render styleable Markdown in your HTML</title>
-  <link rel="icon" href="logo.svg">
-  <link rel="stylesheet" href="prism.css">
-  <link rel="stylesheet" href="prism-live.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="img/logo.svg">
+  <link rel="stylesheet" href="css/prism.css">
+  <link rel="stylesheet" href="css/prism-live.css">
+  <link rel="stylesheet" href="css/style.css">
   <!-- <script src="md-block.js" type="module"></script> -->
-  <script src="bliss.js"></script>
-  <script src="demo.js" type="module"></script>
-  <script src="prism.js"></script>
-  <script src="prism-live.js"></script>
+  <script src="js/bliss.js"></script>
+  <script src="js/demo.js" type="module"></script>
+  <script src="js/prism.js"></script>
+  <script src="js/prism-live.js"></script>
 </head>
 
 <body>
