--- a/index.html
+++ b/index.html
@@ -7,14 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>md-block: Render styleable Markdown in your HTML</title>
   <link rel="icon" href="img/logo.svg" />
-  <link rel="stylesheet" href="css/prism.css" />
-  <link rel="stylesheet" href="css/prism-live.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/main.css" />
   <!-- <script src="md-block.js" type="module"></script> -->
-  <script src="js/bliss.js"></script>
-  <script src="js/demo.js" type="module"></script>
-  <script src="js/prism.js"></script>
-  <script src="js/prism-live.js"></script>
+  <script src="js/main.js" type="module"></script>
 </head>
 
 <body>
