--- a/index-mrkd.html
+++ b/index-mrkd.html
@@ -23,6 +23,7 @@
   </header>
 
   <nav>
+    <a href="index.html">Home</a>
     <a href="#usage">Usage</a>
     <a href="#api">API</a>
     <a href="#recipes">Recipes</a>
