Update front page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>md-block: Render styleable Markdown in your HTML</title>
+  <title>mark-up: Render styleable markups in your HTML</title>
   <link rel="icon" href="img/logo.svg" />
   <link rel="stylesheet" href="css/main.css">
   <script src="js/main.js" type="module"></script>
@@ -13,11 +13,10 @@
 
 <body>
   <header>
-    <h1>&lt;md-block></h1>
+    <h1>&lt;mark-up></h1>
 
     <md-block>
-      Render styleable Markdown in your HTML.
-      Uses [marked](https://marked.js.org/) under the hood.
+      Render styleable markups in your HTML.
     </md-block>
   </header>
 
@@ -31,7 +30,8 @@
 
   <footer>
     <md-span>
-      Made in haste, by [Lea Verou](https://lea.verou.me). Use at your own risk.
+      Made in haste, by [Lea Verou](https://lea.verou.me).
+      Modified by [re-pesk](https://github.com/re-pesk). Use at your own risk.
       [Pull requests welcome](https://github.com/leaverou/md-block)
     </md-span>
   </footer>
