--- a/index-mdit.html
+++ b/index-mdit.html
@@ -13,12 +13,12 @@
 
 <body>
   <header>
-    <h1>&lt;md-block></h1>
+    <h1>&lt;mdit-block></h1>
 
-    <md-block>
+    <mdit-block>
       Render styleable Markdown in your HTML.
-      Uses [marked](https://marked.js.org/) under the hood.
-    </md-block>
+      Uses [markdown-it](https://github.com/markdown-it/markdown-it#markdown-it-) under the hood.
+    </mdit-block>
   </header>
 
   <nav>
@@ -31,9 +31,9 @@
   </nav>
 
   <main>
-    <md-block src="README.md" hmin="2">
+    <mdit-block src="README.md" hmin="2">
       [Documentation on GitHub](https://github.com/leaverou/md-block/#readme)
-    </md-block>
+    </mdit-block>
 
     <section>
       <h2 id="demos">Demos</h2>
@@ -41,7 +41,7 @@
       <p>Block</p>
 
       <script type="text/html" class="md-block-demo">
-        <md-block>
+        <mdit-block>
         # Heading
 
         Text **bold text** *italic text* ~strike~
@@ -56,47 +56,47 @@
 
           * List item 1
           * List item 2
-        </md-block>
+        </mdit-block>
       </script>
 
       <p>Block with incorrect src and fallback content</p>
 
       <script type="text/html" class="md-block-demo">
-        <md-block src="nonexistent.md">
+        <mdit-block src="nonexistent.md">
           `nonexistent.md` was *not* found
-        </md-block>
+        </mdit-block>
       </script>
 
       <p>Minimum heading level:</p>
 
       <script type="text/html" class="md-block-demo">
-        <md-block hmin="3">
+        <mdit-block hmin="3">
           # Heading 3
           ## Heading 4
           ### Heading 5
           #### Heading 6
           ##### Still heading 6
-        </md-block>
+        </mdit-block>
       </script>
 
       <p>Heading links</p>
       <script type="text/html" class="md-block-demo">
-        <md-block hlinks>
+        <mdit-block hlinks>
           # Heading 1
           ## Heading 2
           ### Heading 3
-        </md-block>
-        <md-block hlinks="§">
+        </mdit-block>
+        <mdit-block hlinks="§">
           # Heading 1
           ## Heading 2
           ### Heading 3
-        </md-block>
+        </mdit-block>
       </script>
 
       <p>Inline. Note that block level syntax like headings, code blocks, or lists is not processed</p>
 
       <script type="text/html" class="md-block-demo">
-        <md-span>
+        <mdit-span>
           # Heading
 
           Text **bold text** *italic text* ~strike~
@@ -111,14 +111,14 @@
 
           * List item 1
           * List item 2
-        </md-span>
+        </mdit-span>
       </script>
 
-      <md-block>With and without [sanitization](#handling-untrusted-content).</md-block>
+      <mdit-block>With and without [sanitization](#handling-untrusted-content).</mdit-block>
 
       <script type="text/html" class="md-block-demo">
-        <md-block untrusted src="data:text/markdown,A [Click me](javascript:alert('hi'))"></md-block>
-        <md-block src="data:text/markdown,B [Click me](javascript:alert('hi'))"></md-block>
+        <mdit-block untrusted src="data:text/markdown,A [Click me](javascript:alert('hi'))"></mdit-block>
+        <mdit-block src="data:text/markdown,B [Click me](javascript:alert('hi'))"></mdit-block>
       </script>
 
       <p>View source for more demos!</p>
@@ -135,10 +135,10 @@
   </section>
 
   <footer>
-    <md-span>
+    <mdit-span>
       Made in haste, by [Lea Verou](https://lea.verou.me). Use at your own risk.
       [Pull requests welcome](https://github.com/leaverou/md-block)
-    </md-span>
+    </mdit-span>
   </footer>
 </body>
 
