Clone files for example with asciiDoc

--- a/index-adoc.html
+++ b/index-adoc.html
@@ -13,17 +13,21 @@
 
 <body>
   <header>
-    <h1>&lt;mark-up></h1>
+    <h1>&lt;ascii-doc></h1>
 
     <md-block>
-      Render styleable markups in your HTML.
+      Render styleable Markdown in your HTML.
+      Uses [Asciidoctor](https://asciidoctor.org/) under the hood.
     </md-block>
   </header>
 
   <nav>
-    <span>Examples: </span>
-    <a href="index-mrkd.html">&lt;md-block&gt;</a>
-    <a href="index-adoc.html">&lt;ascii-doc&gt;</a>
+    <a href="index.html">Home</a>
+    <a href="#usage">Usage</a>
+    <a href="#api">API</a>
+    <a href="#recipes">Recipes</a>
+    <a href="tests.html">Tests</a>
+    <a href="https://github.com/leaverou/md-block">GitHub</a>
   </nav>
 
   <main>
