--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <nav>
     <span>Examples: </span>
     <a href="index-mrkd.html">&lt;md-block&gt;</a>
+    <a href="index-rmrk.html">&lt;re-mark&gt;</a>
   </nav>
 
   <main>
