--- a/index-mdit.html
+++ b/index-mdit.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>md-block: Render styleable Markdown in your HTML</title>
+  <title>mdit-block: Render styleable Markdown in your HTML</title>
   <link rel="icon" href="img/logo.svg" />
   <link rel="stylesheet" href="css/main.css" />
   <script src="js/main.js" type="module"></script>
