--- a/index-adoc.html
+++ b/index-adoc.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>mark-up: Render styleable markups in your HTML</title>
+  <title>ascii-doc: Render styleable Asciidoc in your HTML</title>
   <link rel="icon" href="img/logo.svg" />
   <link rel="stylesheet" href="css/main.css">
   <script src="js/main.js" type="module"></script>
