--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="application-name" content="index" />
   <title>mark-up: Render styleable markups in your HTML</title>
   <link rel="icon" href="img/logo.svg" />
   <link rel="stylesheet" href="css/main.css">
@@ -22,7 +23,7 @@
 
   <nav>
     <span>Examples: </span>
-    <a href="index-mrkd.html">&lt;md-block&gt;</a>
+    <a href="index-marked.html">&lt;md-block&gt;</a>
   </nav>
 
   <main>
