--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <nav>
     <span>Examples: </span>
     <a href="index-marked.html">&lt;md-block&gt;</a>
-    <a href="index-remark.html">&lt;re-mark&gt;</a>
+    <a href="index-remark.html">&lt;remark-block&gt;</a>
   </nav>
 
   <main>
