--- a/index-marked.html
+++ b/index-marked.html
@@ -27,7 +27,7 @@
     <a href="#usage">Usage</a>
     <a href="#api">API</a>
     <a href="#recipes">Recipes</a>
-    <a href="tests.html">Tests</a>
+    <a href="tests-marked.html">Tests</a>
     <a href="https://github.com/leaverou/md-block">GitHub</a>
   </nav>
 
