Disable wrong links

--- a/index-adoc.html
+++ b/index-adoc.html
@@ -24,10 +24,10 @@
 
   <nav>
     <a href="index.html">Home</a>
-    <a href="#usage">Usage</a>
-    <a href="#api">API</a>
-    <a href="#recipes">Recipes</a>
-    <a href="tests.html">Tests</a>
+    <!-- <a href="#usage">Usage</a> -->
+    <!-- <a href="#api">API</a> -->
+    <!-- <a href="#recipes">Recipes</a> -->
+    <!-- <a href="tests.html">Tests</a> -->
     <a href="https://github.com/leaverou/md-block">GitHub</a>
   </nav>
 
